[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://background/background_material.tres" type="Material" id=2]
[ext_resource path="res://background/background_material2.tres" type="Material" id=3]
[ext_resource path="res://background/background.gd" type="Script" id=4]

[node name="Background" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 2 )
scale = Vector2( 35, 20 )
z_index = -4096
texture = ExtResource( 1 )
centered = false

[node name="HiderLeft" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( -127.136, 0 )
scale = Vector2( 35, 20 )
z_index = 20
texture = ExtResource( 1 )
centered = false
offset = Vector2( -64, 0 )

[node name="HiderRight" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 2356.25, 0 )
scale = Vector2( 35, 20 )
z_index = 20
texture = ExtResource( 1 )
centered = false

[node name="HiderTop" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 0, -84.757 )
scale = Vector2( 35, 20 )
z_index = 20
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -64 )

[node name="HiderBottom" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 0, 1339.16 )
scale = Vector2( 35, 20 )
z_index = 20
texture = ExtResource( 1 )
centered = false
